--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -16,28 +16,31 @@
           <div class="text-dark text-center "><b>Политика обработки персональных данных</b></div>
         </a>
       </div>
-       <div class="col-1">
+       <!-- <div class="col-1">
         <a class='nav-link' href="{% url 'help' %}">
           <div class="text-dark text-center"><b>Помощь</b></div>
           </a>
-        </div>
-          <div class="col-1">
+        </div> -->
+          <div class="col-2">
         <a class='nav-link' href="{% url 'termsofuse' %}">
-          <div class="text-dark text-center"><b>Условия использования</b></div>
+          <div class="text-dark text-center "><b>Условия использования</b></div>
           </a>
         </div>
           <div class="col-2">
-        <a class='nav-link' href="{% url 'partnership' %}">
+        <!-- <a class='nav-link' href="{% url 'partnership' %}"> -->
+        <a class='nav-link' href="#">
         <div class="text-dark text-center "><b>Партнерство</b></div>
         </a>
       </div>
         <div class="col-2">
-        <a class='nav-link' href="{% url 'socialmedia' %}">
+        <!-- <a class='nav-link' href="{% url 'socialmedia' %}"> -->
+        <a class='nav-link' href="#">
         <div class="text-dark text-center"><b>Мы в социальных сетях</b></div>
         </a>
         </div>
           <div class="col-2">
-          <a class='nav-link' href="{% url 'career' %}">
+          <!-- <a class='nav-link' href="{% url 'career' %}"> -->
+          <a class='nav-link' href="#">
           <div class="text-dark text-center "><b>Карьера с Ruversity.com</b></div>
           </a>
           </div>
