--- a/templates/workshop/create_new_subject.html
+++ b/templates/workshop/create_new_subject.html
@@ -22,7 +22,7 @@
                     <label for="description" >Описание</label>
                 </div>
                 <div class="col">
-                    <textarea class='form-control' id="description" rows='3' minlength='120' maxlength='180' name="description" required placeholder='Введите краткое описание курса. 120-180 символов.'></textarea>
+                    <textarea class='form-control' id="description" rows='4' minlength='160' maxlength='360' name="description" required placeholder='Введите краткое описание курса. 160-360 символов.'></textarea>
                 </div>
                
             </div>
@@ -32,7 +32,7 @@
                     <label for="prerequisite">Необходимая подготовка</label>
                 </div>
                 <div class="col">
-                    <textarea class='form-control' rows='3' id="prerequisite" minlength='120'  maxlength='180' minlength='150'name="prerequisite" required placeholder='Введите требования к предварительной подготовке. 120-180 символов.'></textarea>
+                    <textarea class='form-control' rows='4' id="prerequisite" minlength='160'  maxlength='360' name="prerequisite" required placeholder='Введите требования к предварительной подготовке. 160-360 символов.'></textarea>
                 </div>
         </div>
 
