--- a/templates/contents/cart.html
+++ b/templates/contents/cart.html
@@ -6,7 +6,7 @@
    
     <div class='col-sm-2'></div>
     <div class='col-sm-2 text-light text-start'>
-        <h2>My cart</h2></div>
+        <h2>Моя корзина</h2></div>
      
 </div>
 
@@ -17,16 +17,16 @@
             {% for subject in cart %}
             <div class="row">
                 <div class="col">
-                    <div class="card mb-3" style="height:11rem;">
+                    <div class="card mb-3 img_scale" style="height:10rem;">
                         <div class="row">
                             <div class="col-md-4">
                                 <a href="{% url 'subject' subject.subject.id %}">
                                     <!-- <figure style='width: 18rem; height:10rem;'> -->
                                     <!-- <figure class="image is-16by9"> -->
-                                    <figure class="image is-16by9">
+                                    <figure class="image is-16by9 mb-0">
                                         <img src="{{subject.subject.thumbnail_file.url}}" alt="Placeholder image"
-                                            class='rounded-2 img-fluid'>
-                                        <!-- <img src="{{subject.thumbnail_file.url}}" alt="Placeholder image" class='rounded-2 img-fluid' style='width: 18rem; height:11rem;' > -->
+                                            class='rounded-2 img-fluid' style='height:10rem;'>
+                                        <!-- <img src="{{subject.thumbnail_file.url}}" alt="Placeholder image" class='rounded-2 img-fluid' style='width: 18rem; height:11rem;'> -->
                                     </figure>
                                 </a>
                             </div>
@@ -39,18 +39,19 @@
                                 </div>
                                 <div class="row">
                                     <div class="col">
-                                        <strong>Created by: </strong> {{subject.subject.author}}
+                                        <!-- <strong>Автор: </strong> {{subject.subject.author}} -->
+                                        <strong>Автор: </strong> <a href="{% url 'author_page' subject.subject.author.id %}">{{subject.subject.author.first_name}} {{subject.subject.author.last_name}}</a>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col">
-                                        <strong>Posted: </strong> {{subject.subject.date_posted}}
+                                        <strong>Размещен: </strong> {{subject.subject.date_posted}}
                                     </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="col">
-                                        <strong>Rating:</strong> {{subject.subject.av_rating}}
+                                        <strong>Рейтинг:</strong> {{subject.subject.av_rating}}
 
                                         <div class="stars-outer">
                                             <div class="stars-inner" style="width:{{subject.subject.percent}}"></div>
@@ -58,11 +59,11 @@
                                     </div>
                                 </div>
                               
-                                        <strong>Transactions: </strong> {{subject.subject.transactions}}
+                                        <strong>Покупки: </strong> {{subject.subject.transactions}}
                             </div>
 
                             <div class="col-2 p-2 align-self-center">
-                            <a href="{% url 'delete_from_cart' subject.subject.id %}">
+                            <a href="{% url 'delete_from_cart' subject.subject.id %}" style="text-decoration: none">
                             <input type="submit" value="Remove" class="btn btn-block btn-outline-dark">
                             <!-- <i class="fas fa-trash-alt"></i> -->
                             <!-- <i class="fa fa-trash" aria-hidden="true"></i> -->
@@ -73,6 +74,12 @@
                     </div>
                 </div>
             </div>
+
+
+        
+
+
+
             {% endfor %}
         </div>
     </div>
