--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -45,7 +45,7 @@
                     </div> -->
                     <div class="row">
                         <div class="col"><strong>Автор: </strong>
-                            <a href="{% url 'author_page' subject.author.id %}">{{subject.author}}</a>
+                            <a href="{% url 'author_page' subject.author.id %}">{{subject.author.first_name}} {{subject.author.last_name}}</a>
                         </div>
                     </div>
                     <div class="row">
