--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -33,7 +33,8 @@
         <strong>Покупки:</strong> ({{subject.transactions}})
         </div>
         </div>
-        <div class="row"><div class="col"><strong>Автор: </strong><a href="{% url 'author_page' subject.author.id %}">{{subject.author}}</a></div></div>
+        <div class="row"><div class="col"><strong>Автор: </strong>
+            <a href="{% url 'author_page' subject.author.id %}">{{subject.author.first_name}} {{subject.author.last_name}}</a></div></div>
         <div class="row"><div class="col"><strong>Дата создания: </strong>{{subject.date_posted}}</div></div>
 
         <div class="row">
@@ -47,7 +48,7 @@
 
             <!-- <div class="collapse show" id='collapse-p'> -->
             <div class="collapse" id='collapse-p'>
-            <div class="row" style='height:7rem'>
+            <div class="row" style='height:13.5rem'>
                 <div class="col">
                 {{subject.description}}
             </div>
@@ -65,7 +66,7 @@
             
 
             <div class="collapse" id='collapse-pr'>
-                <div class="row" style='height:7rem'>
+                <div class="row" style='height:13.5rem'>
                     <div class="col">
                     {{subject.prerequisite}}
                     </div>
@@ -73,7 +74,19 @@
             </div>
         <div class="row"><div class="col"><strong>Длительность: </strong>{{subject.length}} мин. </div></div>
         <div class="row">
-            <div class="col"><strong>Стоимость: </strong> {{subject.price.discount}} руб.</div>
+            {% if subject.discount_programs == True and discount_time.discount_on == True %}
+            <div class="row">
+                <div class="col">
+                    <strong>Стоимость:</strong> {{subject.price.discount}} руб.
+                </div>
+            </div>
+            {% else %}
+            <div class="row">
+                <div class="col">
+                    <strong>Стоимость:</strong> {{subject.price.regular}} руб.
+                </div>
+            </div>
+            {% endif %}
         </div>
     </div>
 
