--- a/templates/contents/cart.html
+++ b/templates/contents/cart.html
@@ -64,7 +64,7 @@
 
                             <div class="col-2 p-2 align-self-center">
                             <a href="{% url 'delete_from_cart' subject.subject.id %}" style="text-decoration: none">
-                            <input type="submit" value="Remove" class="btn btn-block btn-outline-dark">
+                            <input type="submit" value="Удалить" class="btn btn-block btn-outline-dark">
                             <!-- <i class="fas fa-trash-alt"></i> -->
                             <!-- <i class="fa fa-trash" aria-hidden="true"></i> -->
                             </a>
