--- a/templates/workshop/studio.html
+++ b/templates/workshop/studio.html
@@ -83,7 +83,7 @@
                                             <p class="title is-6" style="height:10px">{{subject.title}}</p>
                                         </div> -->
                         <div class="row">
-                            <div class="col"><strong>Автор: </strong>{{subject.author}}</div>
+                            <div class="col"><strong>Автор: </strong>{{subject.author.first_name}} {{subject.author.last_name}}</div>
                         </div>
                         <div class="row">
                             <div class="col"><strong>Дата создания:
@@ -137,7 +137,7 @@
                                                 <p class="title is-6" style="height:10px">{{subject.title}}</p>
                                             </div> -->
                     <div class="row">
-                        <div class="col"><strong>Автор: </strong>{{subject.author}}</div>
+                        <div class="col"><strong>Автор: </strong>{{subject.author.first_name}} {{subject.author.last_name}}</div>
                     </div>
                     <div class="row">
                         <div class="col"><strong>Дата размещения: <br></strong>{{subject.date_posted}}</div>
