edited partnership page

--- a/templates/contacts/partnership.html
+++ b/templates/contacts/partnership.html
@@ -2,7 +2,8 @@
 {% block content %}
 <div class="container">
     <div class="row p-2">
-        <p>This is a partnership page</p>
+        <h5>Партнерство</h5>
+        <p>Если у вас есть предложения по сотрудничеству, пожалуйста, направляйте их на нашу электронную почту.</p>
     </div>
 </div>
 
