--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -27,8 +27,8 @@
           </a>
         </div>
           <div class="col-2">
-        <!-- <a class='nav-link' href="{% url 'partnership' %}"> -->
-        <a class='nav-link' href="#">
+        <a class='nav-link' href="{% url 'partnership' %}">
+        <!-- <a class='nav-link' href="#"> -->
         <div class="text-dark text-center "><b>Партнерство</b></div>
         </a>
       </div>
