security policy page added

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -26,12 +26,18 @@
           <div class="text-dark text-center "><b>Условия использования</b></div>
           </a>
         </div>
-          <div class="col-2">
+        <div class="col-2">
+          <a class='nav-link' href="{% url 'security_policy' %}">
+            <div class="text-dark text-center "><b>Правила безопасной оплаты</b></div>
+          </a>
+        </div>
+
+      <!-- <div class="col-2">
         <a class='nav-link' href="{% url 'partnership' %}">
-        <!-- <a class='nav-link' href="#"> -->
+        <a class='nav-link' href="#">
         <div class="text-dark text-center "><b>Партнерство</b></div>
         </a>
-      </div>
+      </div> -->
         <div class="col-2">
         <!-- <a class='nav-link' href="{% url 'socialmedia' %}"> -->
         <a class='nav-link' href="#">
