--- a/templates/cart/credit_card.html
+++ b/templates/cart/credit_card.html
@@ -6,6 +6,25 @@
     <div class="row mt-5">
         <div class="col">
 
+                <!-- <iframe src="https://ruversity.server.paykeeper.ru/form/" style="width:100%; height: 800px; border:0;"></iframe> -->
+                
+                <!-- =====================HTML Form============================== -->
+                <form method='POST' action='https://ruversity.server.paykeeper.ru/create/'>
+                    Введите сумму оплаты:
+                    <input type='text' name='sum' value='100' /> <br />
+                    Введите ID клиента:
+                    <input type='text' name='clientid' value='100' /> <br />
+                    Введите номер заказа:
+                    <input type='text' name='orderid' value='123456' /> <br />
+                    Введите название услуги:
+                    <input type='text' name='service_name' value='Тестовая оплата' /> <br />
+                    <input type='submit' value='Перейти к оплате' />
+                </form>
+                <!-- ==================End of HTML Form============================ -->
+
+
+
+
             <p><h5>Правила оплаты <br>
             Политика безопасности</h5>
             </p>
