--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -126,9 +126,9 @@
                 </div>
             {% else %}
                     <div class="row">
-                        <a href="{% url 'cart' %}">
+                        <a href="{% url 'cart' %}" style="text-decoration:none" >
                             <!-- <button type="button" name="button" class='btn btn-info btn-block'> -->
-                            <button type="button" name="button" class='btn btn-sm btn-block btn-outline-dark'>
+                            <button type="button" name="button" class='btn btn-sm btn-block btn-outline-dark' >
                                 Перейти в корзину
                             </button>
                         </a>
