--- a/templates/cart/credit_card.html
+++ b/templates/cart/credit_card.html
@@ -4,33 +4,38 @@
 
 <div class="container">
     <div class="row mt-5">
-        <div class="col">
+        <div class="col-4">
 
                 <!-- <iframe src="https://ruversity.server.paykeeper.ru/form/" style="width:100%; height: 800px; border:0;"></iframe> -->
                 
-                <!-- =====================HTML Form============================== -->
-                <form method='POST' action='https://ruversity.server.paykeeper.ru/create/'>
-                    Введите сумму оплаты:
-                    <input type='text' name='sum' value='100' /> <br />
-                    Введите ID клиента:
-                    <input type='text' name='clientid' value='100' /> <br />
-                    Введите номер заказа:
-                    <input type='text' name='orderid' value='123456' /> <br />
-                    Введите название услуги:
-                    <input type='text' name='service_name' value='Тестовая оплата' /> <br />
-                    <input type='submit' value='Перейти к оплате' />
-                </form>
-                <!-- ==================End of HTML Form============================ -->
+    <!-- =====================Paykeeper HTML Form============================== -->
+    <form method='POST' action='https://ruversity.server.paykeeper.ru/create/'>
+
+        <div class="label">Приобретаемый курс: {{subject.title}}</div>
+        <input type='text' class='form-control' name='service_name' value='{{subject.id}}' hidden/>
+
+        <div class="label">Сумма к оплате в рублях:</div>
+        {% if subject.discount_programs == True and discount_time.discount_on == True %}
+            <input type='text' class='form-control' name='sum' value='{{subject.price.discount}}'/><br>
+        {% else %}
+            <input type='text' class='form-control' name='sum' value='{{subject.price.regular}}'/><br>     
+        {% endif %}
+        <input type='text' class='form-control' name='clientid' value='{{request.user.id}}' hidden />
+        <input type='text' class='form-control' name='orderid' value='{{transaction.id}}' hidden />
+        <input type='submit' value='Оплатить' class='btn btn-sm btn-block btn-outline-dark'/>
+        </form>
+        <!-- ==================End of Paykeeper HTML Form============================ -->
 
 
+        </div>
+    </div>
 
-
-            <p><h5>Правила оплаты <br>
-            Политика безопасности</h5>
-            </p>
-            
-        
+        <div class="row">
+            <div class="col">
             <p>
+            <h5>Правила оплаты. Политика безопасности</h5>
+
+          
                 При оплате заказа банковской картой, обработка платежа (включая ввод номера карты) происходит на защищенной странице
                 процессинговой системы, которая прошла международную сертификацию. Это значит, что Ваши конфиденциальные данные
                 (реквизиты карты, регистрационные данные и др.) не поступают в интернет-магазин, их обработка полностью защищена и
@@ -48,10 +53,8 @@
 
             <p><strong>Уважаемые Клиенты, информируем Вас о том, что при запросе возврата денежных средств при отказе от покупки, возврат
             производится исключительно на ту же банковскую карту, с которой была произведена оплата</strong></p>
-            
         </div>
-
-
-    </div>
+        </div>
+ 
 </div>
 {% endblock %}
