--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -4,12 +4,12 @@
 <div class="container">
 <div class="row p-2">
 
-    <div class="col-2 border rounded-pill text-center bg-light p-2 ">
-        <a class='nav-link'
+    <div class="col-2 border rounded-pill text-center bg-light p-2" style="width: 0.5rem"><a class='nav-link'
             href="{% url 'list_software' %}">Программирование и IT</a></div>
-    <div class="col-2 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
+
+    <div class="col-2 border rounded-pill text-center bg-light p-2"><a class='nav-link'
             href="{% url 'list_arts' %}">Искусство</a></div>
-    <div class="col-2 border rounded-pill text-center bg-light p-2  "><a class='nav-link'
+    <div class="col-2 border rounded-pill text-center bg-light p-2"><a class='nav-link'
             href="{% url 'list_fitness' %}">Спорт и фитнесс</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2"><a class='nav-link'
             href="{% url 'list_personal' %}">Личностное развитие</a></div>
